Removed x overflow to fix weird scroll

--- a/src/client/chat/Chat.less
+++ b/src/client/chat/Chat.less
@@ -2,6 +2,7 @@
     .chat-log-container {
         height: 200px;
         overflow-y: auto;
+        overflow-x: hidden;
         padding: 0!important;
         .self p {
             text-align: right;
