--- a/src/client/rooms/containers/SidePanelContainer.less
+++ b/src/client/rooms/containers/SidePanelContainer.less
@@ -67,3 +67,8 @@
     color: white;
 
 }
+
+.chat-outer-container{
+    padding-right: 0;
+    overflow-x: hidden;
+}
